# cub3d

./: CMakeLists.txt  Makefile  README.md  a.out  a.sh  algor.c  cub3d.h  cub3d.h.gch  functions.c  main.c  main0.c  map.c  p.cub  p2.cub  params.c  params.cub  parcer.c  parser_map.c  parser_params.c  ray.c  test
libft/: ft_lstadd_back.c  get_next_line.c
mlx_mms/: mlx.h  mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_window.swiftsourceinfo
mlx_mms/man/man3/: mlx_pixel_put.3
pics/: spr.xpm  w1.xpm  w2.xpm  w3.xpm  w4.xpm
src/: action.c  cub3d.h  error.c  functions.c  main.c  parcer_map.c  parcer_outsource.c  parcer_params.c  parcer_params_init.c  parcer_params_units.c  pics.c  ray_draw.c  ray_draw_bf.c  ray_fish.c  ray_what_pic.c  save.c
